css/style.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
body {
    font-size: 14px;
    color: #333;
    background-color: #c8d8e4;
    letter-spacing: 2px;
    font-family: Open Sans, sans-serif;
}

.overlay {
    width: 100%;
    height: 100%;
    position: absolute;
    z-index: 3;
    background-color: rgba(0, 0, 0, 0.5);
}


/* .intro-img {
    display: block;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    z-index: 1;
    padding: 0 0 200px 0px;
} */

.titleMessage {
    position: absolute;
    width: 100%;
    height: 250px;
    top: 60%;
    z-index: 5;
    text-align: center;
    margin-top: -125px;
}

.titleMessage .heading p {
    color: #fff;
    text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
    font-weight: 150;
    letter-spacing: 7px;
}

.titleMessage .heading .main {
    font-size: 90px;
}

.titleMessage .heading .sub {
    font-size: 23px;
}

.section {
    padding: 100px 0;
}

.aboutImage {
    max-width: 100%;
}


/* .gallerySection { */


/* background-color: #2b6777; */


/* background-color: #c8d8e4; */


/* background-color: #f2f2f2; */


/* background-color: #ffff;  */


/* background-color: #52ab98; */


/* color: #fff; */


/* } */

.carouselImg {
    float: left;
    /* width: 500px; */
    /* height: 400px; */
    object-fit: cover;
    text-align: center;
    padding-bottom: 20px;
    margin-bottom: 50px;
}

.carouselImg h1 {
    /* padding: 0 0 5% 50%;
    transform: translate(-25%, 10%); */
    width: 100%;
    /* height: 100px; */
}

.author {
    position: relative;
    /* float: left; */
    padding-top: 10%;
    clear: left;
    margin-top: -10px;
    /* color: #000; */
}

.contactButton {
    color: #000;
    padding: 15px 20px;
    display: inline-block;
    margin-top: 20px;
    border: 1px solid #000;
    /* border-radius: 2px; */
    width: 150px;
    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
}

.contactButton:hover {
    text-decoration: none;
    color: #cccccc;
    background-color: #000;
}

.contactButton:active {
    transform: translate(0, 0.2rem);
    box-shadow: 0 0.5rem rgba(105, 105, 105, 0.2);
}

.squareItem {
    margin-top: 30px;
    position: relative;
}

.squareInnerContainer {
    position: relative;
    padding: 50px 0;
    text-align: center;
    border: 2px solid #cccccc;
    border-top: none;
    height: 150px;
}

.squareInnerContainer::after,
.squareInnerContainer::before {
    content: "";
    position: absolute;
    top: 0;
    width: 30%;
    border-bottom: 2px solid #cccccc;
}

.squareInnerContainer::before {
    right: 0;
}

.squareInnerContainer::after {
    left: 0;
}

.squareContent h2 {
    font-size: 28px;
    margin-bottom: 10px;
    font-weight: 400;
    color: #000;
}

.squareContent h3 {
    font-size: 13px;
    font-weight: 600;
    margin: 0;
}

.squareIcon {
    position: absolute;
    left: 50%;
    top: -30px;
    width: 40%;
    height: 60px;
    font-size: 45px;
    margin-left: -20%;
    color: #444;
}

.squareIcon:hover {
    color: #ffff66;
}

.testimonialsSection {
    height: 550px;
}

.testimonialsSection h2 {
    font-size: 50px;
}

.testimonialsSection h3 {
    /* padding-top: 1px; */
    /* font-size: 4vh; */
    padding: 0 0 0 50%;
    width: 130%;
    text-align: center;
    transform: translate(-30%, 10%);
    overflow-y: auto;
}


/* .testimonialsSection h5 {
    padding-top: 10%;
} */

.servicesHeading {
    padding: 0 38.5% 1%;
    font-size: 50px;
}

.contactSection,
.testimonialsSection {
    /* background: linear-gradient(89deg, #02aab0 0%, #00cdac 100%); */
    /* background: linear-gradient(to right, #7f7fd5, #86a8e7, #91eae4); */
    /* background: linear-gradient(89deg, #636363 0%, #a2ab58 100%); */
    /* background: linear-gradient(89deg, #108dc7 0%, #ef8e38 100%); */
    /* background: linear-gradient(89deg, #2980b9 0%, #6dd5fa 100%); */
    /* background: linear-gradient(89deg, #c9d6ff 0%, #e2e2e2 100%); */
    /* BLUE OPTION */
    /* background: #7f7fd5; */
    /* fallback for old browsers */
    /* background: -webkit-linear-gradient(to right, #7f7fd5, #86a8e7, #91eae4); */
    /* Chrome 10-25, Safari 5.1-6 */
    /* background: linear-gradient(to right, #7f7fd5, #86a8e7, #91eae4); */
    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    /* BLUE OPTION  */
    background-color: #cccccc;
    /* background-color: #616161; */
    /* color: #fff; */
    color: #000;
}

.row {
    align-items: center;
}

.item {
    text-align: center;
}

.filter a {
    color: #000;
    border: 1px solid #000;
    padding: 10px 18px;
    /* border-radius: 2px; */
    display: block;
    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
}

.filter a:hover {
    color: #fff;
    background-color: #000;
    text-decoration: none;
}

.filter a:active {
    transform: translate(0, 0.2rem);
    box-shadow: 0 0.5rem rgba(105, 105, 105, 0.2);
}

.filter li {
    display: inline-block;
    padding: 5px;
}

.filter .current {
    background-color: #000;
    border-color: #000;
    color: #fff;
}

.filter {
    text-align: center;
    width: 100%;
}

.section .heading {
    text-align: center;
    padding-bottom: 40px;
    width: 100%;
}

.items li img {
    width: 100%;
    height: 200px;
    /* -transition: all 0.2s linear, 1s; */
}

.items li {
    display: inline-block;
    padding: 5px;
}

.gallery {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    min-height: 100vh;
    grid-gap: 2rem;
}

.img-container {
    overflow: hidden;
}

.img-container img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    transition: all 0.3s ease-out;
    cursor: pointer;
}

.img-container img:hover {
    transform: scale(1.2);
}

.modal {
    background: rgba(0, 0, 0, 0.8);
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 0;
    pointer-events: none;
    transition: 0.25s ease-out;
}

.modal.open {
    opacity: 1;
    display: initial;
    pointer-events: all;
}

.full-img {
    position: absolute;
    height: 70%;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) scale(0.5);
    transition: all 0.25s ease-out;
}

.full-img.open {
    transform: translate(-50%, -50%) scale(1);
}

.modal p {
    color: white;
    font-size: 2rem;
    position: absolute;
    bottom: 5%;
    left: 50%;
    transform: translate(-50%, -5%);
}

.itemsContainer {
    width: 100%;
}

.items li img {
    width: 100%;
    -transition: all 0.2s linear, 1s;
}

.items .item {
    position: relative;
    display: block;
    overflow: hidden;
}

.items .item:hover img {
    -webkit-transform: scale(1.05, 1.05);
    -moz-transform: scale(1.05, 1.05);
    -o-transform: scale(1.05, 1.05);
    -ms-transform: scale(1.05, 1.05);
    transform: scale(1.05, 1.05);
}

.items {
    padding: 0;
}

.copyrightSection {
    background-color: #000;
    color: #fff;
    padding: 30px 5px;
}

.copyrightSection p {
    margin: 0;
}

#navigation {
    /* background: linear-gradient(89deg, #02aab0 0%, #00cdac 100%); */
    background-color: #000;
    padding: 20px 10px;
    z-index: 100;
    width: 100%;
}

#navigation li {
    padding: 0 10px;
}

#navigation li a {
    color: #fff;
    font-size: 24px;
}

.navbar-brand {
    color: #fff;
}

.navbar-brand,
.navbar-brand:hover {
    color: #fff;
}

.navbar-toggler-icon {
    /* background-image: url(img/icons8-menu-100.png); */
    background-size: 100%;
    color: white;
}

.fixedNav #navigation {
    position: fixed;
    top: 0;
}

.loader {
    width: 100%;
    height: 100%;
    background-color: #fff;
    position: fixed;
    top: 0px;
    left: 0px;
    z-index: 1000;
}

.loader .inner {
    width: 100%;
    height: 100%;
    background: url(../img/loader.gif) center center no-repeat;
}

.phone {
    color: #fff;
    font-size: 24px;
}

.phone a {
    color: #fff;
}

.phone a:hover {
    color: #fff;
}

.aboutParagraph {
    font-size: x-large;
}

#about h3 {
    text-align: center;
}

#services h1 {
    text-align: center;
}


/* Media Query: Large Smartphone (Vertical) */

@media screen and (max-width: 600px) {
    .titleMessage .heading .main {
        font-size: 35px;
    }
    .titleMessage .heading .sub {
        font-size: 20px;
        padding-top: 35px;
    }
    .slides-navigation a.next,
    .slides-navigation a.prev {
        background-size: 35px;
        margin-top: 10px;
    }
    .items .item {
        margin-left: 10px;
        margin-right: 10px;
    }
    .contactButton {
        padding: 10px 7px;
    }
    .fancybox-content {
        max-width: 1300px;
        margin-left: 0;
        margin-right: 0;
    }
    .fancybox-caption__body h3 {
        margin-top: 100px;
    }
    #about h3 {
        /* text-align: center; */
        padding-top: 15px;
    }
    .aboutParagraph {
        text-align: center;
    }
    .navbar-toggler-icon {
        /* background-image: url(img/icons8-menu-100.png); */
        background-size: 100%;
        color: white;
        /* margin-top: 15px; */
        margin-top: 25%;
        margin-right: 20px;
    }
    .item.review {
        width: 95%;
        overflow-y: scroll;
        position: relative;
        height: 200px;
    }
}

